--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,10 @@ spring.application.name=SpringBootVue
 server.port=9090
 # ?????
 #spring.datasource.url=jdbc:mysql://localhost:3306/SpringVue?autoReconnect=true&useUnicode=true&characterEncoding=utf8&serverTimezone=GMT
-spring.datasource.url=jdbc:mysql://localhost:3306/SpringVue
+spring.datasource.url=jdbc:mysql://localhost:3306/<?????>
 #spring.datasource.url=jdbc:mysql://localhost:3306/SpringVue?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=20050702g
+spring.datasource.password=<??>
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA
